--- a/24_react-remotion/package.json
+++ b/24_react-remotion/package.json
@@ -11,19 +11,16 @@
 	"repository": {},
 	"license": "UNLICENSED",
 	"devDependencies": {
-		"@remotion/eslint-config": "^3.3.19",
-		"@types/react": "^18.0.26",
+		"@types/react": "^18.0.6",
 		"@types/web": "^0.0.61",
-		"eslint": "^8.30.0",
-		"prettier": "^2.8.1",
+		"prettier": "^2.6.2",
 		"typescript": "4.6.3"
 	},
 	"dependencies": {
 		"@remotion/cli": "3.3.19",
-		"@remotion/noise": "^3.3.19",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"@remotion/noise": "3.3.19",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
 		"remotion": "3.3.19"
-	},
-	"packageManager": "npm@8.19.2"
+	}
 }
