--- a/24_react-remotion/tsconfig.json
+++ b/24_react-remotion/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"target": "ES2018",
-		"module": "commonjs",
+		"module": "CommonJS",
 		"jsx": "react-jsx",
 		"outDir": "./dist",
 		"strict": true,
