--- a/24_react-remotion/package.json
+++ b/24_react-remotion/package.json
@@ -4,7 +4,7 @@
 	"description": "My Remotion video",
 	"scripts": {
 		"start": "remotion preview",
-		"build": "remotion render VideoId out/video.mp4",
+		"build": "remotion render VideoId out/video.mp4 --quality 100",
 		"upgrade": "remotion upgrade",
 		"test": "eslint src --ext ts,tsx,js,jsx && tsc"
 	},
@@ -17,10 +17,10 @@
 		"typescript": "4.6.3"
 	},
 	"dependencies": {
-		"@remotion/cli": "3.3.19",
-		"@remotion/noise": "3.3.19",
+		"@remotion/cli": "3.3.25",
+		"@remotion/noise": "3.3.25",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
-		"remotion": "3.3.19"
+		"remotion": "3.3.25"
 	}
 }
