--- a/25_project-capstone/package.json
+++ b/25_project-capstone/package.json
@@ -27,9 +27,13 @@
 		"@typescript-eslint/parser": "^5.48.0",
 		"@vitejs/plugin-react": "^3.0.0",
 		"eslint": "^8.31.0",
-		"eslint-config-prettier": "^8.6.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsx-a11y": "^6.7.0",
 		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-react": "^7.31.11",
+		"eslint-plugin-react": "^7.30.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-unused-imports": "^2.0.0",
 		"jsdom": "^21.0.0",
 		"prettier": "2.8.2",
 		"typescript": "^4.9.3",
