--- a/25_project-capstone/package.json
+++ b/25_project-capstone/package.json
@@ -26,6 +26,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.48.0",
 		"@typescript-eslint/parser": "^5.48.0",
 		"@vitejs/plugin-react": "^3.0.0",
+		"c8": "^7.12.0",
 		"eslint": "^8.31.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.26.0",
@@ -36,6 +37,7 @@
 		"eslint-plugin-unused-imports": "^2.0.0",
 		"jsdom": "^21.0.0",
 		"prettier": "2.8.2",
+		"sass": "^1.57.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
 		"vite-plugin-eslint": "^1.8.1",
