--- a/25_project-capstone/package.json
+++ b/25_project-capstone/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.6.2",
 		"vite-tsconfig-paths": "^4.0.3"
 	},
 	"devDependencies": {
@@ -41,6 +42,7 @@
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
 		"vite-plugin-eslint": "^1.8.1",
+		"vite-plugin-svgr": "^2.4.0",
 		"vitest": "^0.26.3"
 	}
 }
