--- a/25_project-capstone/package.json
+++ b/25_project-capstone/package.json
@@ -13,6 +13,7 @@
 		"lint:fix": "eslint --fix ."
 	},
 	"dependencies": {
+		"firebase": "^9.15.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.6.2",
